# legendary-engine

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  WASM_STATUS.md  build-web.sh  justfile
.mimocode/: .cron-lock
crates/engine-asset/: Cargo.toml
crates/engine-asset/fuzz/: Cargo.toml
crates/engine-asset/fuzz/fuzz_targets/: fuzz_audio_importer.rs  fuzz_image_importer.rs  fuzz_material_importer.rs
crates/engine-asset/src/: asset.rs  async_loader.rs  bundle.rs  cache.rs  error.rs  filesystem.rs  lib.rs  loader.rs  manager.rs  pipeline.rs  preview.rs  registry.rs  streaming.rs  types.rs  watcher.rs
crates/engine-asset/src/format/: audio.rs  gltf.rs  image.rs  importers.rs  mod.rs
crates/engine-asset/tests/: asset_tests.rs  pipeline_integration.rs
crates/engine-core/: Cargo.toml
crates/engine-core/examples/: android_demo.rs  auto_render_demo.rs  basic.rs  complete_demo.rs  complete_game.rs  cross_platform.rs  deferred_demo.rs  dungeon_demo.rs  feature_demo.rs  game_flow_demo.rs  input_demo.rs  mod_demo.rs  particle_demo.rs  physics_demo.rs  platformer_demo.rs  plugin_demo.rs  scene3d_demo.rs  simple_game.rs  sprite_demo.rs  tetris.rs  unity_api_demo.rs
crates/engine-core/src/: android.rs  app.rs  asset_database.rs  asset_handle.rs  behaviour.rs  bounds.rs  character_controller.rs  color.rs  component.rs  components.rs  config.rs  context.rs  debug.rs  debug_utils.rs  engine.rs  error.rs  event.rs  events.rs  gameobject.rs  hierarchy.rs  lib.rs  logger.rs  math_utils.rs  mathf.rs  memory.rs  monobehaviour.rs  monobehaviour_runner.rs  object.rs  player_loop.rs  plugin.rs  plugin_loader.rs  plugins.rs  prefab.rs  profiler.rs  random.rs  raycast.rs  resource.rs  scene_management.rs  scriptable_object.rs  serialization.rs  (+5 more)
crates/engine-core/tests/: asset_tests.rs  core_tests.rs  editor_tests.rs  events_tests.rs  monobehaviour_tests.rs  unity_api_completion_tests.rs  unity_api_tests.rs
crates/engine-ecs/: Cargo.toml
crates/engine-ecs/benches/: ecs_benchmarks.rs  rayon_vs_jobs.rs
crates/engine-ecs/fuzz/: Cargo.toml
crates/engine-ecs/fuzz/fuzz_targets/: fuzz_sparse_set.rs  fuzz_world_operations.rs
crates/engine-ecs/src/: access.rs  component.rs  entity.rs  error.rs  gameobject.rs  lib.rs  par_iter.rs  query.rs  schedule.rs  system.rs  world.rs
crates/engine-ecs/tests/: ecs_tests.rs  parallel_integration.rs
crates/engine-editor/: Cargo.toml
crates/engine-editor/examples/: editor_core_demo.rs
crates/engine-editor/src/: camera.rs  commands.rs  gizmo.rs  hierarchy.rs  hot_reload.rs  inspector.rs  layout.rs  lib.rs  main.rs  performance_overlay.rs  performance_profiler.rs  plugin.rs  resource_browser.rs  scene_bridge.rs  scene_serializer.rs  shortcuts.rs  state.rs  terrain_panel.rs  viewport.rs  viewport_renderer.rs
crates/engine-editor/src/animation_editor/: curve_editor.rs  io.rs  keyframe_list.rs  mod.rs  preview.rs  timeline.rs
crates/engine-editor/tests/: editor_tests.rs
crates/engine-framework/: Cargo.toml
crates/engine-framework/src/: action.rs  ctx.rs  error.rs  flow.rs  lib.rs  plugin.rs  resource.rs  save.rs  stack.rs  state.rs
crates/engine-framework/tests/: framework_tests.rs
crates/engine-math/: Cargo.toml
crates/engine-math/benches/: math_benchmarks.rs
crates/engine-math/src/: error.rs  lib.rs
crates/engine-math/tests/: math_tests.rs
crates/engine-physics/: Cargo.toml
crates/engine-physics/benches/: physics_benchmarks.rs
crates/engine-physics/examples/: physics_demo.rs  physics_engine_demo.rs
crates/engine-physics/fuzz/: Cargo.toml
crates/engine-physics/src/: body.rs  broadphase.rs  ccd.rs  collider.rs  contact.rs  error.rs  joint.rs  lib.rs  physics_2d.rs  plugin.rs  world.rs
crates/engine-physics/tests/: cylinder_collision_tests.rs  joint_constraint_tests.rs  physics_tests.rs
crates/engine-render/: Cargo.toml
crates/engine-render/benches/: render_benchmarks.rs
crates/engine-render/src/: animation.rs  atmosphere.rs  bloom.rs  camera.rs  camera_system.rs  collect_system.rs  command_batch.rs  culling.rs  culling_system.rs  deferred.rs  error.rs  frustum.rs  gpu_profiler.rs  ibl.rs  indirect.rs  instancing.rs  lib.rs  light.rs  line3d.rs  lod.rs  mesh_bridge.rs  occlusion.rs  particle.rs  particle3d.rs  plugin.rs  post_process.rs  renderer.rs  shadow.rs  sprite.rs  sprite_renderer.rs  ssao.rs  taa.rs  test_gpu.rs  texture_bridge.rs  texture_store.rs  tilemap.rs  view.rs
crates/engine-render/tests/: render_tests.rs  sprite_batch_performance.rs
crates/engine-scene/: Cargo.toml
crates/engine-scene/src/: animation_state.rs  diff.rs  error.rs  hierarchy.rs  ik.rs  keyframe.rs  lib.rs  multi_scene.rs  node.rs  prefab.rs  prefab_instantiate.rs  prefab_registry.rs  scene_layer.rs  scene_manager.rs  serialization.rs  skeleton.rs  sub_scene.rs  transform.rs
crates/engine-scene/tests/: integration_tests.rs  scene_tests.rs
crates/engine-script/: Cargo.toml
crates/engine-script/benches/: bridge_overhead.rs
crates/engine-script/examples/: health_system.lua  lua_demo.rs  movement.lua  movement.wat  wasm_demo.rs
crates/engine-script/src/: bridge.rs  callback.rs  error.rs  event_bridge.rs  hot_reload.rs  lib.rs  mod_plugin.rs  mod_system.rs  system.rs  type_registry.rs  wasm.rs
crates/engine-script/tests/: script_tests.rs
crates/engine-terrain/: Cargo.toml
crates/engine-terrain/src/: brush.rs  components.rs  error.rs  lib.rs  mesh_gen.rs  paint.rs  plugin.rs  raycast.rs  vegetation.rs
crates/engine-terrain/tests/: terrain_tests.rs
crates/engine-ui/: Cargo.toml
crates/engine-ui/src/: animation.rs  error.rs  gui.rs  imgui_plugin.rs  integration.rs  layout.rs  lib.rs  plugin.rs  retained.rs  skin.rs  text.rs  theme.rs
crates/engine-ui/tests/: imgui_tests.rs  ui_tests.rs
crates/engine-window/: Cargo.toml
crates/engine-window/src/: error.rs  lib.rs  window.rs
crates/engine-window/tests/: window_tests.rs
examples/basic/: Cargo.toml
examples/basic/src/: editor.rs  main.rs
examples/web-demo/: Cargo.toml  index.html
examples/web-demo/src/: lib.rs
(+257 files in other folders)
