[workspace]
resolver = "2"
members = [
    "crates/engine-math",
    "crates/engine-ecs",
    "crates/engine-window",
    "crates/engine-asset",
    "crates/engine-core",
    "crates/engine-scene",
    "crates/engine-render",
    "crates/engine-input",
    "crates/engine-audio",
    "crates/engine-framework",
    "crates/engine-ui",
    "crates/engine-editor",
    "crates/engine-physics",
    "crates/engine-network",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["ConspiratorR"]

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
