[workspace]
resolver = "2"
members = [
    "crates/engine-math",
    "crates/engine-ecs",
    "crates/engine-window",
    "crates/engine-asset",
    "crates/engine-core",
    "crates/engine-scene",
    "crates/engine-render",
    "crates/engine-input",
    "crates/engine-audio",
    "crates/engine-framework",
    "crates/engine-ui",
    "crates/engine-editor",
    "crates/engine-physics",
    "crates/engine-network",
    "crates/engine-jobs",
    "crates/engine-script",
    "crates/engine-terrain",
]
exclude = [
    "crates/engine-ecs/fuzz",
    "crates/engine-asset/fuzz",
    "crates/engine-physics/fuzz",
    "examples/web-demo",
    "examples/test-plugin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["ConspiratorR"]

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

[workspace.metadata.cargo-all-features]
skip_feature_sets = [
    ["engine-ecs/jobs-backend"],
]

[profile.dev]
debug = 1
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
opt-level = 3
