[package]
name = "engine-asset"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossbeam-channel = "0.5"
engine-math = { path = "../engine-math" }
flate2 = "1"
gltf = "1.4"
image = "0.25"
notify = "7"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
