[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine-ecs = { path = "../engine-ecs" }
engine-scene = { path = "../engine-scene" }
engine-render = { path = "../engine-render" }
engine-input = { path = "../engine-input" }
engine-audio = { path = "../engine-audio" }
engine-asset = { path = "../engine-asset" }
engine-window = { path = "../engine-window" }
engine-math = { path = "../engine-math" }
winit = "0.30"
