[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["audio"]
audio = ["dep:engine-audio"]

[dependencies]
engine-ecs = { path = "../engine-ecs" }
engine-scene = { path = "../engine-scene" }
engine-render = { path = "../engine-render" }
engine-input = { path = "../engine-input" }
engine-audio = { path = "../engine-audio", optional = true }
engine-asset = { path = "../engine-asset" }
engine-window = { path = "../engine-window" }
engine-math = { path = "../engine-math" }
thiserror = "2"
winit = "0.30"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
engine-framework = { path = "../engine-framework" }
engine-physics = { path = "../engine-physics" }

[[example]]
name = "game_flow_demo"
required-features = ["audio"]
