[package]
name = "engine-ecs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rayon = "1.10"
engine-jobs = { path = "../engine-jobs", optional = true }

[features]
default = []
jobs-backend = ["dep:engine-jobs"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "ecs_benchmarks"
harness = false

[[bench]]
name = "rayon_vs_jobs"
harness = false
required-features = ["jobs-backend"]
