[package]
name = "engine-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine-core = { path = "../engine-core" }
engine-ui = { path = "../engine-ui" }
engine-math = { path = "../engine-math" }
engine-framework = { path = "../engine-framework" }
egui = "=0.30.0"

[[bin]]
name = "engine-editor"
path = "src/main.rs"
