[package]
name = "engine-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine-core = { path = "../engine-core" }
engine-ecs = { path = "../engine-ecs" }
engine-scene = { path = "../engine-scene" }
engine-ui = { path = "../engine-ui" }
engine-math = { path = "../engine-math" }
engine-framework = { path = "../engine-framework" }
engine-input = { path = "../engine-input" }
engine-asset = { path = "../engine-asset" }
engine-render = { path = "../engine-render" }
engine-window = { path = "../engine-window" }
engine-terrain = { path = "../engine-terrain" }
engine-physics = { path = "../engine-physics" }
engine-audio = { path = "../engine-audio" }
engine-script = { path = "../engine-script" }
mlua = { version = "0.11", features = ["lua54"] }
bytemuck = { version = "1", features = ["derive"] }
egui = "=0.30.0"
wgpu = "23"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
winit = "0.30"
notify = "6"
notify-debouncer-mini = "0.4"
rfd = "0.15"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "engine-editor"
path = "src/main.rs"
