[package]
name = "engine-framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine-core = { path = "../engine-core" }
engine-scene = { path = "../engine-scene" }
engine-ecs = { path = "../engine-ecs" }
engine-input = { path = "../engine-input" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
