[package]
name = "engine-physics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine-math = { path = "../engine-math" }
engine-core = { path = "../engine-core" }
engine-ecs = { path = "../engine-ecs" }
rayon = "1.10"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "physics_benchmarks"
harness = false
