[package]
name = "engine-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine-window = { path = "../engine-window" }
engine-math = { path = "../engine-math" }
engine-asset = { path = "../engine-asset" }
wgpu = { version = "23", features = ["wgsl"] }
winit = "0.30"
thiserror = "2"
bytemuck = { version = "1", features = ["derive"] }
image = "0.25"
pollster = "0.4"
