[package]
name = "engine-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine-window = { path = "../engine-window" }
engine-math = { path = "../engine-math" }
engine-asset = { path = "../engine-asset" }
engine-ecs = { path = "../engine-ecs" }
engine-scene = { path = "../engine-scene" }
wgpu = { version = "23", features = ["wgsl"] }
winit = "0.30"
thiserror = "2"
bytemuck = { version = "1", features = ["derive"] }
image = "0.25"
pollster = "0.4"
crossbeam-channel = "0.5"
parking_lot = "0.12"
rayon = "1.10"
rand = "0.9"
fontdue = "0.9"
tracing = { workspace = true }
getrandom = { workspace = true }

[features]
default = ["native"]
native = []
web = []

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "render_benchmarks"
harness = false
