[package]
name = "engine-scene"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine-ecs = { path = "../engine-ecs" }
engine-math = { path = "../engine-math" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
bincode = "1.3"
thiserror = "2.0"
