[package]
name = "engine-script"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "send"] }
wasmtime = { version = "45", default-features = false, features = ["cranelift", "runtime", "component-model"] }
notify = "8"
notify-debouncer-mini = "0.6"
engine-ecs = { path = "../engine-ecs" }
engine-core = { path = "../engine-core" }
engine-math = { path = "../engine-math" }
anyhow = "1"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[dev-dependencies]
tempfile = "3"
wat = "1"
criterion = { workspace = true }

[[bench]]
name = "bridge_overhead"
harness = false
