[package]
name = "engine-terrain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
engine-ecs = { path = "../engine-ecs" }
engine-render = { path = "../engine-render" }
engine-math = { path = "../engine-math" }
engine-core = { path = "../engine-core" }
thiserror = "2"
log = "0.4"
rand = "0.9"
