[package]
name = "engine-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
engine-core = { path = "../engine-core" }
engine-input = { path = "../engine-input" }
engine-render = { path = "../engine-render" }
egui = "=0.30.0"
egui-wgpu = "=0.30.0"
wgpu = "23"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2"
