[package]
name = "engine-window"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
winit = "0.30"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { workspace = true }
ndk = { workspace = true }
ndk-context = { workspace = true }
ndk-sys = { workspace = true }
