[package]
name = "basic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
engine-core = { path = "../../crates/engine-core" }
engine-ecs = { path = "../../crates/engine-ecs" }
engine-framework = { path = "../../crates/engine-framework" }
engine-ui = { path = "../../crates/engine-ui" }
engine-editor = { path = "../../crates/engine-editor" }
engine-input = { path = "../../crates/engine-input" }
egui = "=0.30.0"
