[package]
name = "engine-asset-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.engine-asset]
path = ".."

[[bin]]
name = "fuzz_material_importer"
path = "fuzz_targets/fuzz_material_importer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_image_importer"
path = "fuzz_targets/fuzz_image_importer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_audio_importer"
path = "fuzz_targets/fuzz_audio_importer.rs"
test = false
doc = false

[profile.release]
opt-level = 3
debug = false
