[package]
name = "engine-physics-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.engine-physics]
path = ".."

[dependencies.engine-math]
path = "../../engine-math"

[[bin]]
name = "fuzz_collision_detection"
path = "fuzz_targets/fuzz_collision_detection.rs"
test = false
doc = false

[[bin]]
name = "fuzz_broadphase"
path = "fuzz_targets/fuzz_broadphase.rs"
test = false
doc = false

[[bin]]
name = "fuzz_contact_solver"
path = "fuzz_targets/fuzz_contact_solver.rs"
test = false
doc = false

[profile.release]
opt-level = 3
debug = false
